@@ -1,31 +1,31 @@
-e7a7391a4afe1bb2b0545d09a8702b9b *DESCRIPTION
+921704f0ed56b573a3057b35c819c8fc *DESCRIPTION
 c5e04c3d6a48e5e5f123d0436014acd0 *NAMESPACE
 79f8c199a8e695c7dd2abbf5cd97bd5a *R/g.abr.day.names.R
-942043202f33126f03978234c91ff21a *R/g.analyse.R
+fd27bca7dbc691ef1c324bd7fe2145e6 *R/g.analyse.R
 19f994083880cfd32d7c2919badcd666 *R/g.binread.R
 ae0b6ed10ee3861471dfd015a2753f28 *R/g.calibrate.R
 3b1f7a8ee4dfcfb9554f025cd12020fb *R/g.create.sp.mat.R
 6e73994b82d179d033fef92e0c2dfeb2 *R/g.createcoordinates.R
 f8baba3222c45682063456245cef7317 *R/g.detecmidnight.R
-944e25dc40bbfbf09f05c6f27ead1d0d *R/g.dotorcomma.R
+03d18f54a3a6e7d6321615f24e6e9cd8 *R/g.dotorcomma.R
 056ec9455889a740a41c66cfacdc3ef1 *R/g.downsample.R
 c1943f28a5f709b3d7e9cb87583e46e8 *R/g.extractheadervars.R
 b1de7cd3bfe9802f136b6fb3fdb498cc *R/g.getM5L5.R
 80427c124ba9afdfe2ee0de2c2291e61 *R/g.getbout.R
 bc0355f740878d776f7ff7b1cae54ad4 *R/g.getmeta.R
 761ef06997fbf94fc54f95622a91c858 *R/g.impute.R
-143c072901899920d9693c5dace3d3ab *R/g.inspectfile.R
+bb38ec54003f8d3aa47d4119502a7f53 *R/g.inspectfile.R
 546a08d9520430e4965e59dfbbe2b578 *R/g.loadlog.R
 11d84e15c859c6086c29911e90d0ba7d *R/g.metric.R
 2bfdd3836d404b34c23186ad78a155ca *R/g.part1.R
-6036107afb2570b25bcb4b3c7426285f *R/g.part2.R
+62d9794e08ca215f08737397d048eab0 *R/g.part2.R
 276981ffd8fd208cefe8301b630020ca *R/g.part3.R
 4c711c97f5538ea350da3db178374222 *R/g.part4.R
 d93d51f7aff249f807c96fc1cb1ed24b *R/g.plot.R
 cfeb103a4a7941b22e7ef5c68597bd50 *R/g.plot5.R
 8933c77e202412c0789a5ae55442f89e *R/g.report.part2.R
 2ef62fc57c994bafb19fdfc7ed101314 *R/g.report.part4.R
-068058dd3a0ddc4733ecb928b08c3764 *R/g.shell.GGIR.R
+03a8ec614a57b122ca5882a496f679f9 *R/g.shell.GGIR.R
 d90c33c8b1fd40f39c7c40b3c5a5a285 *R/g.sib.det.R
 12ed79609defc93472e9a670db05cfbf *R/g.sib.plot.R
 1c00579da48f7003cdaa7595742f9241 *R/g.sib.sum.R
@@ -35,8 +35,8 @@ c465d73a6a2d6510c97f069906ba47b8 *R/g.weardec.R
 5e07c17c608dee884ea2ad0a1bfa159f *data/data.getmeta.RData
 0cb14c60e18f5bd4c15fb942c95aea2b *data/data.inspectfile.RData
 2ef488d8543e33e67645f5c0deb94040 *data/datalist
-7749a3443a23cc243cdc2635d7367bf9 *inst/NEWS.Rd
-3b6f172e75eb85cb13154cd65a1f2b4e *man/GGIR-package.Rd
+17b84d9264b3e2455cec1c9916b38bcc *inst/NEWS.Rd
+c4309c877189bf7c7168df578ae64973 *man/GGIR-package.Rd
 df7d0b5c90d4ad2909e3196064e23f30 *man/data.calibrate.Rd
 4c1353b061014b508c6ed057c3068699 *man/data.getmeta.Rd
 732e7f4d54ba71967c25ba6545b55e07 *man/data.inspectfile.Rd
